--- a/myface-onface-html/src/assets/less/style/block/invoice.less
+++ b/myface-onface-html/src/assets/less/style/block/invoice.less
@@ -1,7 +1,6 @@
 .invoice-modal {
 	.modal-body {
 		border-radius: 0 0 3px 3px;
-		padding-top: 0;
 	}
 	.btn {
 		width: 138px;
@@ -28,6 +27,7 @@
 	}
 }
 .invoice-table {
+	margin-top: -15px;
 	margin-bottom: 0;
 	.product-img {
 		width: 65px;
