--- a/myface-onface-html/src/assets/less/style/table.less
+++ b/myface-onface-html/src/assets/less/style/table.less
@@ -12,6 +12,16 @@
       }
     }
   }
+  > thead,
+  > tbody,
+  > tfoot {
+    > tr {
+      > th,
+      > td {
+        vertical-align: middle;
+      }
+    }
+  }
   //thead cells
   > thead > tr > th {
     border-bottom: 1px double @box-border-color;
