--- a/myface-onface-html/src/assets/less/style/core.less
+++ b/myface-onface-html/src/assets/less/style/core.less
@@ -14,8 +14,9 @@ body {
   -webkit-font-smoothing: subpixel-antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: @font-family;
-  font-weight: 400;
-  font-size: 13px;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.25;
   color: @text-color-1;
   overflow-x: hidden;
   overflow-y: auto;
@@ -89,5 +90,16 @@ img {
   width: 100%;
   display: table;
 }
-
+.divider {
+  width: 100%;
+  border: 0;
+  border-top: @border;
+  margin: 20px 0;
+}
+.box {
+  border: @border;
+  border-radius: @box-border-radius;
+  padding: 15px 10px;
+  margin-bottom: 15px;
+}
 
