--- a/myface-onface-html/src/assets/less/style/panel.less
+++ b/myface-onface-html/src/assets/less/style/panel.less
@@ -1,6 +1,8 @@
 .panel-default {
 	border-color: #dde0ef;
 	> .panel-heading {
+		font-size: 16px;
+		font-weight: bold;
 	  color: @text-color-1;
 	  background-color: #dde0ef;
 	  border-color: #dde0ef;
