--- a/myface-onface-html/src/views/block/_checkout-header.html
+++ b/myface-onface-html/src/views/block/_checkout-header.html
@@ -1,15 +1,19 @@
-<header class="container">
-	<div class="col-xs-3 shop-logo">
-		<a href="#" title="">
-			<img src="assets/images/upload/shop-logo/shop-logo.png" alt="myface">
-			<h1 class="logo-text">DW Secret Saigon</h1>
-		</a>
-	</div>
-	<!--checkout-process-->
-	<div class="col-xs-6 checkout-process">
-	</div><!--/.checkout-process-->
-	<div class="col-xs-3 hotline">
-	<span class="hotline-text">Hotline hỗ trợ:<a class="hotline-number" href="tel:+1900636099">1900 636 099</a></span>
-	<span class="note">(08-18h, T2-T7)</span>
+<header>
+	<div class="container">
+		<div class="col-xs-3 shop-logo">
+			<a href="#" title="">
+				<img src="assets/images/upload/shop-logo/shop-logo.png" alt="myface">
+				<h1 class="logo-text">DW Secret Saigon</h1>
+			</a>
+		</div>
+		<!--checkout-process-->
+		<div class="col-xs-6 checkout-process">
+		</div><!--/.checkout-process-->
+		<div class="col-xs-3">
+			<div class="row hotline">
+				<span class="hotline-text">Hotline hỗ trợ:<a class="hotline-number" href="tel:+1900636099">1900 636 099</a></span>
+				<span class="note">(08-18h, T2-T7)</span>
+			</div>
+		</div>
 	</div>
 </header>
