--- a/myface-onface-html/src/views/checkout-step-1.html
+++ b/myface-onface-html/src/views/checkout-step-1.html
@@ -136,15 +136,15 @@
 		          <td><span class="price">- 35.000<sup>đ</sup></span></td>
 		        </tr>
 		        {% endfor %}
-		        <tr>
+		        <tr class="cart-footer">
 		          <th>Tạm tính:</th>
 		          <td><span class="price">1.435.000<sup>đ</sup></span></td>
 		        </tr>
-		        <tr>
+		        <tr class="cart-footer">
 		          <th>Mã giảm giá:</th>
 		          <td><span class="price">- 35.000<sup>đ</sup></span></td>
 		        </tr>
-		        <tr class="ship-row">
+		        <tr class="cart-footer ship-row">
 		          <th>Phí vận chuyển</th>
 		          <td><span class="ship-text">Miễn phí</span></td>
 		        </tr>
