--- a/myface-onface-html/src/views/checkout-step-2.html
+++ b/myface-onface-html/src/views/checkout-step-2.html
@@ -1,5 +1,99 @@
 {% extends "layout/_layout-checkout.html" %}
 {% block page-container %}
 <main class="container checkout-step-2">
+	<div class="col-xs-12 col-lg-9">
+		<div class="panel panel-default">
+		  <div class="panel-heading">Thông tin thanh toán</div>
+		  <div class="panel-body">
+		  	<div class="form-group pay-form">
+          <div class="radio">
+            <label>
+              <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
+              <span>Thanh toán bằng tiền mặt khi nhận hàng (COD)</span>
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+              <span>Thanh toán bằng thẻ ATM có đăng ký Internet Bangking</span>
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="optionsRadios" id="optionsRadios3" value="option3">
+              <span>Chuyển khoản qua ngân hàng</span>
+            </label>
+          </div>
+        </div>
+        <button type="submit" class="btn btn-primary btn-pay">Đặt hàng <i class="fa fa-angle-right"></i></button>
+		  </div>
+		</div>
+	</div>
+	<div class="col-xs-12 col-lg-3">
+		<div class="box checkout-box-info">
+			<div class="box-row">
+        <label class="pull-left">Địa chỉ nhận hàng</label>
+        <a class="pull-right cart-change" href="#">Thay đổi</a>
+      </div>
+      <div class="box-row customer-info">
+        <span class="customer-name">Phan Thị Lê</span> -
+        <span class="customer-tel">0902559591</span>
+      </div>
+      <p class="customer-address">
+      	121/11 Hưng Phú, Phường 8, Quận 8, Tp.HCM.  	
+      </p>
+		</div>
+		<!--box-cart-->
+		<div class="box-cart">
+			<div class="cart-table">
+				<div class="cart-header">
+	      	<div class="cart-row">
+	          <div class="cart-left">
+	          	<label>Đơn hàng</label>
+	          	<p class="cart-amount">(<span>03</span> sản phẩm)</p>
+	          </div>
+	          <div class="cart-right">
+	          	<a class="cart-change" href="#">Thay đổi</a>
+	          </div>
+	        </div>
+	      </div><!--/.cart-header-->
+        <div class="cart-product">
+        	{% for x in [1,2,3] %}
+        	<div class="cart-row">
+	          <div class="cart-left">
+	          	<span class="amount">01 x</span> 
+	          	<span>Áo Sơ Mi Nam Dáng Ôm màu xanh dương</span>
+	          </div>
+	          <div class="cart-right">
+	          	<span class="price">1.435.000<sup>đ</sup></span>
+	          </div>
+	        </div>
+        	{% endfor %}
+	      </div><!--/.cart-product-->
+	      <div class="cart-body">
+	        <div class="cart-row sub-price">
+	          <div class="cart-left">Tạm tính:</div>
+	          <div class="cart-right"><span class="price">1.435.000<sup>đ</sup></span></div>
+	        </div>
+	        <div class="cart-row">
+	          <div class="cart-left">Mã giảm giá:</div>
+	          <div class="cart-right"><span class="price">- 35.000<sup>đ</sup></span></div>
+	        </div>
+	        <div class="cart-row ship-row">
+	          <div class="cart-left">Phí vận chuyển</div>
+	          <div class="cart-right"><span class="ship-text">Miễn phí</span></div>
+	        </div>
+	      </div><!--/.cart-body-->
+	      <div class="cart-footer">
+	        <div class="cart-row total-price">
+	          <div class="cart-left">Tổng cộng:</div>
+	          <div class="cart-right">
+	          	<span class="price">1.435.000<sup>đ</sup></span>
+	          </div>
+	        </div>
+	      </div><!--/.cart-footer-->
+      </div>
+		</div><!--/.box-cart-->
+	</div>
 </main>
 {% endblock %}
